config/traefik-ingress-route/argo-rollouts.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-rollouts
  namespace: blue-green
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argo-blue-green-active.localhost`)
      kind: Rule
      services:
        - name: rollout-bluegreen-active
          port: 80
          # lab cluster only use http - no certs
          scheme: http
    - match: Host(`argo-blue-green-preview.localhost`)
      kind: Rule
      services:
        - name: rollout-bluegreen-preview
          port: 80
          # lab cluster only use http - no certs
          scheme: http
