config/traefik-ingress-route/gitea.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-ingress-route
  namespace: gitea
spec:
  entryPoints:
    - web
  routes:
    #- match: PathPrefix(`/argocd`)
    - match: Host(`gitea.localhost`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
          scheme: http
