config/traefik-ingress-route/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.localhost`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
