config/traefik-ingress-route/uptime-kuma.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`uptime.localhost`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 80
